fix: Try fix the wrap issue in the footnotes section.

--- a/src/styles/global/footnote.scss
+++ b/src/styles/global/footnote.scss
@@ -16,6 +16,8 @@ main {
 
     li {
       line-height: normal;
+      word-wrap: break-word;
+      word-break: break-all;
     }
   }
 
